apps/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
    prometheus.io/path: /metrics

spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
